# addai

./: .gitignore  CLAUDE.md  README.md  addai_cli.py  eeg_regions.json  eeg_tokens.json
analysis/: eeg_analyzer.py  eeg_bucketing.py  report_generator.py  run_analysis.py
analysis/logs/: 1749287850.json  1749288261.json  xab.json  xac.json  xad.json
analysis/logs/brad/: 1749331786.json
analysis/logs/james/: 1749335833.json
analysis/logs/tmp/: 1749288142.json  1749289268.json  xaa.json  xae.json
analysis/reports/jovial_goodall/: report.md
api/: pyproject.toml  requirements.txt
api/src/: data_parser.py  main.py  serial_monitor.py  websocket_handler.py
docs/: ARCHITECTURE.md  addai-analysis-tool.md  eeg-bucketing-system.md  roadmap.md  sample-captures-1s.csv  trace.webm
frontend/: Cargo.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: lib.rs  main.ts
frontend/www/: index.html
reports/: README.md
reports/agile_stefan/: eeg_tokens.json
reports/daring_planck/: report.html  report.json  report.md
reports/graceful_dalton/: report.html  report.json  report.md
reports/jovial_goodall/: report.html  report.json
reports/radiant_telescope/: report.html  report.json  report.md
reports/serene_allen/: eeg_regions.json  eeg_tokens.json  report.html  report.json  report.md
reports/sharp_heyrovsky/: report.html  report.json  report.md
reports/test_run4/: report.html  report.json  report.md
reports/test_unified/: report.html  report.json  report.md
reports/xaa/: eeg_tokens.json  report.html  report.json  report.md
